# Python-Eel-Electron.js-SvelteKit-Boilerplate

./: .flake8  .gitignore  app.py  app.spec.example  main.cjs  package.json  pyproject.toml  svelte.config.js
docs/: LICENSE  README.md
py/functions/: eel.py
py/models/: __init__.py  eel_exposer.py
