[tool.poetry]
name = "school"
version = "0.0.0"
description = ""
authors = ["whinee"]

packages = [
    { include = "school" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
altgraph = "^0.17.4"
ansicon = "^1.89.0"
blessed = "^1.20.0"
bottle = "^0.13.2"
bottle-websocket = "^0.2.9"
certifi = "^2024.8.30"
cffi = "^1.17.1"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
codefind = "^0.1.7"
colorama = "^0.4.6"
eel = "^0.18.1"
future = "^1.0.0"
gevent = "^24.11.1"
gevent-websocket = "^0.10.1"
greenlet = "^3.1.1"
idna = "^3.10"
jinxed = "^1.3.0"
mypy-extensions = "^1.0.0"
ovld = "^0.4.6"
pathspec = "^0.12.1"
platformdirs = "^4.3.6"
pycparser = "^2.22"
pyinstaller = "^6.11.1"
pyinstaller-hooks-contrib = "^2024.10"
pyparsing = "^3.2.0"
pywin32-ctypes = "^0.2.3"
requests = "^2.32.3"
six = "^1.17.0"
tomli = "^2.2.1"
urllib3 = "^2.2.3"
watchdog = "^6.0.0"
wcwidth = "^0.2.13"
whichcraft = "^0.6.1"
zope-event = "^5.0"
zope-interface = "^7.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
no-implicit-optional = "^1.4"
ruff = "^0.8.2"

[tool.mypy]
disable_error_code = [
    "import",
    "annotation-unchecked",
    "attr-defined",
    "no-untyped-call",
    "no-untyped-def",
    "type-arg",
    "unused-ignore",
]
strict = true
exclude = "dev"

[tool.ruff.per-file-ignores]
"examples/*" = [
    "INP001",
    "N999"
]

[tool.ruff]
select = [
    "ANN",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "D",
    # "DTZ",
    "E",
    "F",
    "I",
    "INP",
    "N",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "UP"
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "ANN",
    "B",
    "C4",
    "COM",
    "D",
    "E",
    "F",
    "I",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "UP"
]
unfixable = []

ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN401",
    "B008",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "D203",
    "D205",
    "D212",
    "D401",
    "D404",
    "D406",
    "D407",
    "D417",
    "E501",
    "F722",
    "I002",
    "N812",
    "N818",
    "Q000",
    "RET503",
    "S101",
    "UP007",
    "UP032",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "pyenv",
    "venv",
]

line-length = 88

target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 5

[tool.ruff.pycodestyle]
ignore-overlong-task-comments = false